--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "crypto-browserify": "^3.12.0",
     "ethers": "^5.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "stream-browserify": "^3.0.0"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -36,9 +34,18 @@
     ]
   },
   "devDependencies": {
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "postcss": "^8.4.5",
+    "process": "^0.11.10",
     "react-app-rewired": "^2.1.11",
-    "tailwindcss": "^3.0.15"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.0.15",
+    "url": "^0.11.0"
   }
 }
